add and style nav

--- a/index.html
+++ b/index.html
@@ -13,4 +13,38 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Jina Zhu | Photographer</title>
   </head>
+  <body>
+    <header class="main-head">
+      <nav>
+        <h1 id="logo">Jina Zhu</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero-introduction flex">
+          <h2>Jina Zhu <br />Photographer</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam
+            sunt labore blanditiis tempora dolore ipsa! Facere provident commodi
+            dolorem rem distinctio est magnam, unde quaerat. Necessitatibus ea
+            officiis nobis!
+          </p>
+          <a href="#gallery">Gallery</a>
+        </div>
+        <div class="hero-image">
+          <img
+            class="hero-elena"
+            src="/img/elena-joy.png"
+            alt="picture of elena
+          joy"
+          />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
