--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             alt="picture of elena
           joy"
           />
+          <img src="/img/plant1.png" alt="" class="plant1 plant" />
+          <img src="/img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
     </main>
