html for about section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,42 @@
           <img src="/img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
+      <div class="about">
+        <div class="about-image">
+          <h4>MINIMAL</h4>
+          <img src="/img/about-image.png" alt="portrait-picture" />
+        </div>
+        <div class="about-text">
+          <h2>Jina Zhu</h2>
+          <div class="about-life">
+            <h3>My Life</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+              veritatis exercitationem tempore eum, magnam dolorem, omnis
+              placeat ipsa laboriosam accusamus, illum quisquam sit! Dicta iure,
+              voluptatum alias sequi voluptate asperiores!
+            </p>
+          </div>
+          <div class="about-work">
+            <h3>My work</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+              veritatis exercitationem tempore eum, magnam dolorem, omnis
+              placeat ipsa laboriosam accusamus, illum quisquam sit! Dicta iure,
+              voluptatum alias sequi voluptate asperiores!
+            </p>
+          </div>
+          <div class="about-contact">
+            <h3>Get in Touch</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+              veritatis exercitationem tempore eum, magnam dolorem, omnis
+              placeat ipsa laboriosam accusamus, illum quisquam sit! Dicta iure,
+              voluptatum alias sequi voluptate asperiores!
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
