create and position about section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       </section>
       <div class="about">
         <div class="about-image">
-          <h4>MINIMAL</h4>
-          <img src="/img/about-image.png" alt="portrait-picture" />
+          <h5>MINIMAL</h5>
+          <img src="/img/about-image.png" alt="portrait-picture" width="95%" />
         </div>
-        <div class="about-text">
+        <div class="about-text flex">
           <h2>Jina Zhu</h2>
           <div class="about-life">
             <h3>My Life</h3>
