place photos in a grid

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="/img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
-      <div class="about">
+      <section class="about">
         <div class="about-image">
           <h5>MINIMAL</h5>
           <img src="/img/about-image.png" alt="portrait-picture" width="95%" />
@@ -88,6 +88,16 @@
             </p>
           </div>
         </div>
+      </section>
+      <div class="gallery">
+        <header class="gallery-head">
+          <h2>Quality Photography</h2>
+          <p>My work pictures that I took</p>
+        </header>
+        <img class="gallery1" src="/img/gallery-1.jpg" alt="man in suit" />
+        <img class="gallery2" src="/img/gallery-2.jpg" alt="lady in coat" />
+        <img class="gallery3" src="/img/gallery-3.jpg" alt="lady in tshirt" />
+        <img class="gallery4" src="/img/gallery-4.jpg" alt="lady in jacket" />
       </div>
     </main>
   </body>
