--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
     <header class="main-head">
       <nav>
         <h1 id="logo">Jina Zhu</h1>
-        <input type="checkbox" class="menu-check" />
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="line1"></span>
+          <span class="line2"></span>
+          <span class="line3"></span>
         </div>
       </nav>
     </header>
@@ -53,7 +52,7 @@
           <img src="/img/plant2.png" alt="" class="plant2 plant" />
         </div>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-image">
           <h5>MINIMAL</h5>
           <img src="/img/about-image.png" alt="portrait-picture" width="95%" />
@@ -99,8 +98,8 @@
         <img class="gallery3" src="/img/gallery-3.jpg" alt="lady in tshirt" />
         <img class="gallery4" src="/img/gallery-4.jpg" alt="lady in jacket" />
       </div>
-      <section class="contact">
-        <div class="form-wrapper">
+      <section class="contact" id="contact">
+        <div class="form-wrapper flex">
           <h2>
             Get in <br />
             <span>touch.</span>
@@ -134,5 +133,6 @@
         </li>
       </ul>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
